Bug 62206 - FORMATTING: Cell reference inside conditional format will not move when row is inserted/removed before first conditional format row
Summary: FORMATTING: Cell reference inside conditional format will not move when row i...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.0.1.2 release
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.1.0 target:4.0.3
Keywords:
: 62377 62579 62873 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-03-12 07:53 UTC by Daniel Schmidt
Modified: 2020-02-01 12:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
LibreOffice spreadsheet document with a test case and the bugdescription (82.38 KB, application/vnd.oasis.opendocument.spreadsheet)
2013-03-12 07:53 UTC, Daniel Schmidt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Daniel Schmidt 2013-03-12 07:53:09 UTC
Created attachment 76365 [details]
LibreOffice spreadsheet document with a test case and the bugdescription

For further description see Bug1 in attached sheet.

Problem description: 
If you insert a row before the first conditional formatted row (inside the attached sheet - between the rows 1 to 12), the cell reference inside the conditional
format option does not change. If you insert a new row between 13 and 30 everything
works fine.

Steps to reproduce:
1. Open attached sheet
2. Insert a row between the rows 1 and 12

Current behavior:
Conditional formatted cells in column B are not correct any more. E.g. now the text in cell B21 is red if A22 is "!".

Expected behavior:
The text in column B of a row should be red if column A has the value "!".

Operating System: All
Version: 4.0.1.2 release
Comment 1 Daniel Schmidt 2013-03-18 11:38:35 UTC
Hello there,

is this bug reproducible on your systems?

If you have further question please let me know. If you can confirm this issue, please set the status to NEW.

Thank you in advance!
Comment 2 Jacques Guilleron 2013-03-19 00:06:02 UTC
Hi Daniel,

I thought it was the same as bug 62208. So i set this one to NEW too.

Regards,

Jacques Guilleron
Comment 3 Commit Notification 2013-03-24 05:24:47 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9261c0bf6ecf6633a5577879f003edfcb569f4d7

URM_INSDEL we need to update the src position, fdo#62206



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Markus Mohrhard 2013-03-25 08:34:42 UTC
*** Bug 62579 has been marked as a duplicate of this bug. ***
Comment 5 Markus Mohrhard 2013-03-25 08:41:56 UTC
*** Bug 62377 has been marked as a duplicate of this bug. ***
Comment 6 Eike Rathke (retired, only occasionally showing up) 2013-03-25 13:20:25 UTC
Note: the bugdoc and description are a tad confusing because the doc was saved with the already broken format where the cells A of the next row are compared.
Comment 7 Commit Notification 2013-03-25 13:21:33 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0224cbfebdfc3f73bc870e0d039908aba879474e&h=libreoffice-4-0

URM_INSDEL we need to update the src position, fdo#62206


It will be available in LibreOffice 4.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Mikeyy - L10n HR 2013-03-25 18:50:07 UTC
@Eike Rathke
Check example in comment 4 bug.
Comment 9 Commit Notification 2013-03-26 09:53:00 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=80996c374b4ff2514b2e952cfd572ae499b481a1

add inital test case for fdo#62206



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Markus Mohrhard 2013-03-30 11:31:46 UTC
*** Bug 62873 has been marked as a duplicate of this bug. ***
Comment 11 Jacques Guilleron 2013-03-30 12:58:29 UTC
Thanks Markus. That works fine with Lo 4.0.3.0+ (Build ID: 64a3b58a9ace11c6a01708e8de14712e27e0204), Windows 7 Home Premium.

Regards,

jacques Guilleron