URM_INSDEL we need to update the src position, fdo#62206

See ScFormulaCell::UpdateReference for a similar update

Change-Id: I1f98d26adb5085e4bdab63cc23f97a81928d6b13